# sem11-llvm-hw05

./: .clang-format  .gitignore  CMakeLists.txt  Language.g4  Makefile  MyLanguage.g4  game.lang  game.ll  game.s  gen.cpp  gen.hpp  interp.cpp  main.ll
hw01/: .clang-format  .gitignore  CMakeLists.txt  main.c  main.ll  sim.c  sim.h
